// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button control isActive 1`] = `
<Styled(Component)
  classes={Object {}}
  isActive={true}
  mini={true}
  variant="fab"
>
  Text
</Styled(Component)>
`;

exports[`Button control render 1`] = `
<Styled(Component)
  classes={Object {}}
  isActive={false}
  mini={true}
  variant="fab"
>
  Text
</Styled(Component)>
`;
